Fix answer overflow and user filter

--- a/src/Admin/Admin.css
+++ b/src/Admin/Admin.css
@@ -71,15 +71,18 @@ ul.alternatives-admin li button.delete {
   margin: 5px 0;
 }
 .results .bar-label {
-  width: 20%;
+  width: 25%;
   float: left;
   height: 50px;
   line-height: 50px;
   padding: 0 14px;
   color: #fff;
 }
+.results .bar-votes {
+  width: 5%!important;
+}
 .results .bar-container {
-  width: 80%;
+  width: 70%;
   height: 50px;
   line-height: 50px;
   float: right;
